gitea-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-ingress
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitea.ojaydiddy.site`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: gitea-http
          port: 3000
